<resources>
    <string name="app_name">Meal Planner</string>
    <string name="title_calendar">Week Plan</string>
    <string name="title_grocery">Grocery</string>
    <string name="title_waste">Waste Tracker</string>
    <string name="title_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wasted_food_questionnaire">Wasted Food Questionnaire</string>
    <string name="confirm">CONFIRM</string>
    <string name="ingredient">Ingredient</string>
    <string name="grocery_list">Grocery List</string>
    <string name="add_an_ingredient">Add an Ingredient</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="todo">TODO</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string-array name="days_of_the_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="ingredients_of_the_week">
        <item>Flour</item>
        <item>Salt</item>
        <item>Baking powder</item>
    </string-array>

    <string-array name="ingredients_in_fridge">
        <item>Flour</item>
        <item>Salt</item>
        <item>Baking powder</item>
        <item>Chicken</item>
        <item>Fries</item>
        <item>Spaghetti</item>
        <item>Parmesean cheese</item>
        <item>Tomato sauce</item>
        <item>Ground beef</item>
    </string-array>

    <string-array name="suggested_fridge_dishes">
        <item>Burger</item>
        <item>Chicken Escalope</item>
        <item>Spaghetti Bolognese</item>
    </string-array>

    <string-array name="favorite_dishes">
        <item>Taco Salad</item>
        <item>Butter Chicken</item>
        <item>Paella</item>
        <item>Asian Garlic Noodle</item>
    </string-array>

    <string-array name="breakfast">
        <item>waffles</item>
        <item>Maple French Toast</item>
    </string-array>


    <string-array name="ingredient_quantity">
        <item>4 lb(s)</item>
        <item>2 lb(s)</item>
        <item>1 lb(s)</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </string-array>
</resources>